fix: add other content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <div>
         <h1>First content of this adventure</h1>
         <p> we are going to fly</p>
+        <p> I also like when i am on fly</p>
+    </div>
+    <div>
+        J'aime tout ce qui attire mon attention
     </div>
 </body>
 </html>
