fix: add other thinking

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <div>
         J'aime tout ce qui attire mon attention
     </div>
+    <div>
+        J'aime quand je suis entouré par des étrangers 
+        <span> C' est le seul moyen d'aprehender d'autres culture</span>
+    </div>
 </body>
 </html>
