fix: add other thinking on test-div branch

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
         J'aime quand je suis entouré par des étrangers 
         <span> C' est le seul moyen d'aprehender d'autres culture</span>
     </div>
+    <p> Introduction de ma personnalité</p>
+    <div>
+        Je suis Mathurin Christ, étudiant alternant en développement web
+    </div>
 </body>
 </html>
