fix: refactor some sentences

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <p> we are going to fly</p>
         <p> I also like when i am on fly</p>
     </div>
+    <h2>
+        Je vais être le titre 2 de cette page
+    </h2>
     <div>
         J'aime quand je suis entouré par des étrangers 
         <span> C' est le seul moyen d'aprehender d'autres culture</span>
