fix: refactor content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div>
         J'aime tout ce qui attire mon attention
     </div>
+    <div> je suis le prince de la ville </div>
     <div>
         J'aime quand je suis entouré par des étrangers 
         <span> C' est le seul moyen d'aprehender d'autres culture</span>
