fix: content added

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <div>
         Je suis Mathurin Christ, étudiant alternant en développement web
     </div>
+    <div>
+        je suis le contenu ajouté
+    </div>
 </body>
 </html>
