fix: added another content

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <div>
         je suis le contenu ajouté
     </div>
+    <div>
+        un autre contenu a été ajouté dans le conteneur de cette branche
+    </div>
 </body>
 </html>
