fix: added message

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <div>
         Je suis Mathurin Christ, étudiant alternant en développement web
     </div>
+    <div>
+        le contenu ajouté dans la branche master
+    </div>
 </body>
 </html>
