fix: dupliquer conteneur

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     <div>
         un autre contenu a été ajouté dans le conteneur de cette branche
     </div>
+    <div></div>
+        un autre contenu a été ajouté dans le conteneur de cette branche
+    </div>
 </body>
 </html>
