fix(content): add another thinking

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
         <span> Ce cpan contient le contexte de cette page</span>
         <p> je paragraphe de cette page</p>
     </div>
+    <div> je suis le contenu de ce conteneur</div>
 
 </body>
 </html>
