fix(content): add another div

--- a/home.html
+++ b/home.html
@@ -10,6 +10,12 @@
         <p> je paragraphe de cette page</p>
     </div>
     <div> je suis le contenu de ce conteneur</div>
+    <div>
+        ceci est me conteneur ajouté avec la branche dev
+    </div>
+    <div> 
+        another div pour confirmer mes test
+    </div>
 
 </body>
 </html>
