fix(master): add others div

--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
         <p> je paragraphe de cette page</p>
     </div>
     <div> je suis le contenu de ce conteneur</div>
+    <div> ceci est le contenu de la branche main</div>
+    <div> je vais ajouter d'autres  informations dans ce fichier</div>
 
 </body>
 </html>
