--- a/home.html
+++ b/home.html
@@ -18,6 +18,9 @@
     <div> 
         another div pour confirmer mes test
     </div>
+    <div>
+    je veux voir la difference entre le git fetch et le git pull
+    </div>
 
 </body>
 </html>
