--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <div>
+        ce contener est fait pour voir la difference entre le fetch et le pull
+    <div>
         <span> Ce cpan contient le contexte de cette page</span>
         <p> je paragraphe de cette page</p>
     </div>
