--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-        ce contener est fait pour voir la difference entre le fetch et le pull
+        ce contener est fait pour voir la difference entre 
     <div>
         <span> Ce cpan contient le contexte de cette page</span>
         <p> je paragraphe de cette page</p>
