--- a/home.html
+++ b/home.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <div>
+        contenu pour push vers la origin main
+    </div>
+    <div>
         ce contener est fait pour voir la difference entre 
     <div>
         <span> Ce cpan contient le contexte de cette page</span>
