feat: add a feature in home page

--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+    <div> 
+        une fonctionnalité ajoutée
     <div>
         contenu pour push vers la origin main
     </div>
