feat: add a content to the container of the page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div>
+        un autre contenu
+    </div>
+    <div>
         le contenu de la branche test-again
     </div>
     <div>
